--- a/MISA.Fresher.Core/Properties/Resources.resx
+++ b/MISA.Fresher.Core/Properties/Resources.resx
@@ -155,7 +155,7 @@
     <comment>Giới tính</comment>
   </data>
   <data name="excel_ListNhanVien" xml:space="preserve">
-    <value>Danh sách nhân viên</value>
+    <value>DANH SÁCH NHÂN VIÊN</value>
     <comment>Danh sách nhân viên</comment>
   </data>
   <data name="excel_Name" xml:space="preserve">
