--- a/MISA.Fresher.Web/Properties/Resources.resx
+++ b/MISA.Fresher.Web/Properties/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="excel_save" xml:space="preserve">
+    <value>Danh_sach_nhan_vien.xlsx</value>
+  </data>
   <data name="excel_source" xml:space="preserve">
     <value>application/vnd.openxmlformats-officedocument.spreadsheetml.sheet</value>
   </data>
