--- a/MISA.Fresher.Core/Properties/Resources.resx
+++ b/MISA.Fresher.Core/Properties/Resources.resx
@@ -181,6 +181,9 @@
     <value>nam</value>
     <comment>nam</comment>
   </data>
+  <data name="message_MaxLength" xml:space="preserve">
+    <value>Thông tin {0} không được dài quá {1} ký tự!</value>
+  </data>
   <data name="OTHER" xml:space="preserve">
     <value>Khác</value>
   </data>
